--- a/index.html
+++ b/index.html
@@ -15,23 +15,19 @@
 
 <body>
   <header class="jumbotron-fluid bg-gradient">
-    <div class="container-fluid pt-5 pb-3 px-3">
-      <div class="d-flex-block flex-column justify-content-start">
+    <div class="row align-items-center py-5 px-4">
+      <div class="col-6">
         <h1 class="display-5 text-light">Work Day Scheduler</h1>
         <p class="lead text-light">A simple calendar app for scheduling your work day!</p>
         <p id="currentDay" class="lead text-light">Monday / March 02</p>
       </div>
-      <!-- Analog Clock -->
-      <div class="d-flex-inline justify-content-end">
-        <div class="clock">
-          <div class="hours-container">
-            <div class="hours"></div>
-          </div>
-          <div class="minutes-container">
-            <div class="minutes"></div>
-          </div>
-          <div class="seconds-container">
-            <div class="seconds"></div>
+        <!-- Analog Clock -->
+      <div class="col-6 ml-auto">
+        <div class="circle">
+          <div class="face">
+            <div id="hour" class="hour"></div>
+            <div id="minute" class="minute"></div>
+            <div id="second" class="second"></div>
           </div>
         </div>
       </div>
@@ -48,18 +44,48 @@
           </tr>
         </thead>
         <tbody>
-          <tr class="d-flex mb-1 border-top-0">
+          <tr class="d-flex mb-1">
             <th scope="row" class="col-2 --border">9am</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
             <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
-          <tr class="d-flex mb-1 border-top-0">
+          <tr class="d-flex mb-1">
             <th scope="row" class="col-2 --border">10am</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
             <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
-          <tr class="d-flex mb-1 border-top-0">
+          <tr class="d-flex mb-1">
             <th scope="row" class="col-2 --border">11am</th>
+            <td id="" class="col-9"><textarea name=""></textarea></td>
+            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+          </tr>
+          <tr class="d-flex mb-1">
+            <th scope="row" class="col-2 --border">12pm</th>
+            <td id="" class="col-9"><textarea name=""></textarea></td>
+            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+          </tr>
+          <tr class="d-flex mb-1">
+            <th scope="row" class="col-2 --border">1pm</th>
+            <td id="" class="col-9"><textarea name=""></textarea></td>
+            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+          </tr>
+          <tr class="d-flex mb-1">
+            <th scope="row" class="col-2 --border">2pm</th>
+            <td id="" class="col-9"><textarea name=""></textarea></td>
+            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+          </tr>
+          <tr class="d-flex mb-1">
+            <th scope="row" class="col-2 --border">3pm</th>
+            <td id="" class="col-9"><textarea name=""></textarea></td>
+            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+          </tr>
+          <tr class="d-flex mb-1">
+            <th scope="row" class="col-2 --border">4pm</th>
+            <td id="" class="col-9"><textarea name=""></textarea></td>
+            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+          </tr>
+          <tr class="d-flex mb-1">
+            <th scope="row" class="col-2 --border">5pm</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
             <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
