Improved look of hour lines in the scheduler, got the clock properly aligned in the header

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <p id="currentDay" class="lead text-light">Monday / March 02</p>
       </div>
         <!-- Analog Clock -->
-      <div class="col-6 ml-auto">
-        <div class="circle">
+      <div class="col-6">
+        <div class="circle mr-3 ml-auto">
           <div class="face">
             <div id="hour" class="hour"></div>
             <div id="minute" class="minute"></div>
@@ -33,65 +33,65 @@
       </div>
     </div>
   </header>
-  <section class="container">
+  <main class="container">
     <div class="row">
-      <table class="table bg-light-gray">
+      <table class="table w-100 bg-light-gray mt-2">
         <thead>
-          <tr class="d-flex bg-white border-0">
+          <tr class="d-flex bg-white">
             <th scope="col" class="col-2">Monday</th>
             <th scope="col" class="col-9"></th>
             <th scope="col" class="col-1"></th>
           </tr>
         </thead>
         <tbody>
-          <tr class="d-flex mb-1">
-            <th scope="row" class="col-2 --border">9am</th>
+          <tr class="d-flex mb-1 shadow-sm">
+            <th scope="row" class="col-2 --border ">9am</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+            <td class="col-1 justify-content-center align-self-center"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
-          <tr class="d-flex mb-1">
+          <tr class="d-flex mb-1 shadow-sm">
             <th scope="row" class="col-2 --border">10am</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+            <td class="col-1 justify-content-center align-self-center"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
-          <tr class="d-flex mb-1">
+          <tr class="d-flex mb-1 shadow-sm">
             <th scope="row" class="col-2 --border">11am</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+            <td class="col-1 justify-content-center align-self-center"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
-          <tr class="d-flex mb-1">
+          <tr class="d-flex mb-1 shadow-sm">
             <th scope="row" class="col-2 --border">12pm</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+            <td class="col-1 justify-content-center align-self-center"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
-          <tr class="d-flex mb-1">
+          <tr class="d-flex mb-1 shadow-sm">
             <th scope="row" class="col-2 --border">1pm</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+            <td class="col-1 justify-content-center align-self-center"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
-          <tr class="d-flex mb-1">
+          <tr class="d-flex mb-1 shadow-sm">
             <th scope="row" class="col-2 --border">2pm</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+            <td class="col-1 justify-content-center align-self-center"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
-          <tr class="d-flex mb-1">
+          <tr class="d-flex mb-1 shadow-sm">
             <th scope="row" class="col-2 --border">3pm</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+            <td class="col-1 justify-content-center align-self-center"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
-          <tr class="d-flex mb-1">
+          <tr class="d-flex mb-1 shadow-sm">
             <th scope="row" class="col-2 --border">4pm</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+            <td class="col-1 justify-content-center align-self-center"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
-          <tr class="d-flex mb-1">
+          <tr class="d-flex mb-1 shadow-sm">
             <th scope="row" class="col-2 --border">5pm</th>
             <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
+            <td class="col-1 justify-content-center align-self-center"><button type="button" class="btn btn-blue fas fa-sync-alt"></button></td>
           </tr>
         </tbody>
       </table>
-  </section>
+    </main>
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
