--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
           <p id="currentDate" class="lead text-light text-shadow"></p>
         </div>
         <!-- Analog Clock -->
-        <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent"> -->
-        
+        <div>
           <ul class="navbar-nav shrink-clock ml-auto">
             <li class="nav-item">
               <div class="align-clock">
@@ -39,7 +38,6 @@
             </li>
           </ul>
         </div> 
-        <!-- </div> -->
     </nav>
   </header>
   <!-- Hourly Planner -->
@@ -102,6 +100,12 @@
         </tbody>
       </table>
   </main>
+
+  <footer class="page-footer">
+    <div class="container-fluid text-center text-light text-shadow m-0 bg-gradient">
+      <h3 class="m-0 p-4">Happy Hour!</h3>    
+    </div>
+  </footer>
 
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
