--- a/index.html
+++ b/index.html
@@ -46,57 +46,13 @@
       <table class="table w-100 bg-light-gray mt-2">
         <thead>
           <tr class="d-flex bg-white">
-            <th id="currentDay" scope="col" class="col-2">Loading...</th>
-            <th scope="col" class="col-9"></th>
-            <th scope="col" class="col-1"></th>
+            <th scope="col" class="col-4"></th>
+            <th id="currentDay" scope="col" class="col-4 text-center">Loading...</th>
+            <th scope="col" class="col-4"></th>
           </tr>
         </thead>
         <tbody>
-          <tr class="d-flex mb-1 shadow-sm rounded-right">
-            <th scope="row" class="col-2 --border-left">9am</th>
-            <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1 save-bg-blue"><i class="fas fa-sync-alt"></i></td>
-          </tr>
-          <tr class="d-flex mb-1 shadow-sm rounded-right">
-            <th scope="row" class="col-2 --border-left">10am</th>
-            <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1 save-bg-blue"><i class="fas fa-sync-alt"></i></td>
-          </tr>
-          <tr class="d-flex mb-1 shadow-sm rounded-right">
-            <th scope="row" class="col-2 --border-left">11am</th>
-            <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1 save-bg-blue"><i class="fas fa-sync-alt"></i></td>
-          </tr>
-          <tr class="d-flex mb-1 shadow-sm rounded-right">
-            <th scope="row" class="col-2 --border-left">12pm</th>
-            <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1 save-bg-blue save"><i class="fas fa-sync-alt"></i></td>
-          </tr>
-          <tr class="d-flex mb-1 shadow-sm rounded-right">
-            <th scope="row" class="col-2 --border-left">1pm</th>
-            <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1 save-bg-blue save"><i class="fas fa-sync-alt"></i></td>
-          </tr>
-          <tr class="d-flex mb-1 shadow-sm rounded-right">
-            <th scope="row" class="col-2 --border-left">2pm</th>
-            <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1 save-bg-blue save"><i class="fas fa-sync-alt"></i></td>
-          </tr>
-          <tr class="d-flex mb-1 shadow-sm rounded-right">
-            <th scope="row" class="col-2 --border-left">3pm</th>
-            <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1 save-bg-blue save"><i class="fas fa-sync-alt"></i></td>
-          </tr>
-          <tr class="d-flex mb-1 shadow-sm rounded-right">
-            <th scope="row" class="col-2 --border-left">4pm</th>
-            <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1 save-bg-blue save"><i class="fas fa-sync-alt"></i></td>
-          </tr>
-          <tr class="d-flex mb-1 shadow-sm rounded-right">
-            <th scope="row" class="col-2 --border-left">5pm</th>
-            <td id="" class="col-9"><textarea name=""></textarea></td>
-            <td class="col-1 save-bg-blue save"><i class="fas fa-sync-alt"></i></td>
-          </tr>
+          
         </tbody>
       </table>
   </main>
