--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <th scope="col" class="col-4"></th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="blocks-view">
           
         </tbody>
       </table>
