--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="assets/css/style.css" />
-  <title>Work Day Scheduler</title>
+  <title>Work Day Planner</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-gradient">
       <div class="container-fluid align-header p-4">
         <div>
-          <h1 class="display-5 text-light text-shadow">Work Day Scheduler</h1>
+          <h1 class="display-5 text-light text-shadow">Work Day Planner</h1>
           <p class="lead text-light text-shadow">A simple calendar app for scheduling your work day!</p>
           <p id="currentDate" class="lead text-light text-shadow"></p>
         </div>
